# tank_adiabatic

./: .editorconfig  .pre-commit-config.yaml  CollocationElement.py  LICENSE  TankModel.py  conftest.py  element.py  pyproject.toml  pytest.ini  testCollocationElement.py  testElement.py  testPlotCollocationElement.py  testTankModel.py
PodRomAnalyis/: controlAnalysis.py  multiSamplePodRomAnalysis.py  podRomAnalysis.py  runPodRomAnalysis.py  sensitivityAnalysis.py
PodRomAnalysis/: __init__.py  controlAnalysis.py  globalSensitivityAnalysis.py  podRomAnalysis.py  sensitivityAnalysis.py
bifurcationAnalysis/: runBifurcation.py
collocationElement/: CollocationElement.py  __init__.py
collocationElement/test/: testCollocationElement.py  testPlotCollocationElement.py
mms/: __init__.py  runInexact.py  tankMMS.py  testConditionNumbers.py
mms/tests/: testTankMMs.py
postProcessing/: __init__.py  plot.py
tankModel/: TankModel.py  __init__.py  romData.py
tankModel/test/: testDEIM.py  testPodRom.py  testSensitivityEquations.py  testTankModel.py
tests/: testCollocationElement.py  testTankModel.py
